force-app/main/default/objects/OMS_Job_Schedule__mdt/OMS_Job_Schedule__mdt.object-meta.xml
<CustomObject>
    <description>Maintain the batch size and frequency for OMS Batch jobs</description>
    <label>OMS Job Schedule</label>
    <pluralLabel>OMS Job Schedules</pluralLabel>
</CustomObject>