force-app/main/default/objects/OMS_Job_Schedule__mdt/fields/Dev_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Dev_Frequency__c</fullName>
    <description>How often the job should run</description>
    <label>Dev Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>