force-app/main/default/objects/OMS_Job_Schedule__mdt/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>Name of the Batch job</description>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>