force-app/main/default/objects/OMS_Job_Schedule__mdt/fields/Prod_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Prod_Frequency__c</fullName>
    <label>Prod Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>