force-app/main/default/objects/OMS_Job_Schedule__mdt/fields/sfmcClientId__c.field-meta.xml
<CustomField>
    <fullName>sfmcClientId__c</fullName>
    <label>sfmcClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>