force-app/main/default/objects/OMS_Job_Schedule__mdt/listViews/OMS_Job_Schedules.listView-meta.xml
<ListView>
    <fullName>OMS_Job_Schedules</fullName>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>DeveloperName</columns>
    <columns>Job_Name__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Dev_Frequency__c</columns>
    <columns>Prod_Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>OMS Job Schedules</label>
    <language>en_US</language>
</ListView>